--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-﻿dj-database-url==0.4.0
-Django==1.9.2
+dj-database-url==0.4.0
 gunicorn==19.4.5
 psycopg2==2.6.1
 requests==2.9.1
 virtualenv==14.0.6
 whitenoise==2.0.6
+Django==1.9.2
