--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,6 @@ requests==2.9.1
 virtualenv==14.0.6
 whitenoise==2.0.6
 Django==1.9.2
+djangorestframework==3.3.3
+Markdown==2.6.6
+django-filter==0.13.0
